# ascii-rs

./: .gitignore  Cargo.toml  README.md  build.bat
.github/workflows/: release.yml
src/: ascii.rs  cli.rs  color.rs  config.rs  error.rs  logging.rs  main.rs  metrics.rs  playback.rs  storage.rs  terminal.rs  utils.rs  video.rs
