[package]
name = "ascii-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
image = "0.25"
rodio = { version = "0.20", features = ["wav"] }
zstd = "0.13"
sha2 = "0.10"
rayon = "1.10"
indicatif = "0.17"
sysinfo = "0.35"
thiserror = "2.0"
log = "0.4"
ctrlc = "3.4"
lazy_static = "1.5"
tempfile = "3.20"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
log4rs = "1.3.0"

